deployment/aggregator-listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-listener-deploy
  namespace: consumers
  labels:
    app: aggregator-listener-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator-listener-deploy
  template:
    metadata:
      labels:
        app: aggregator-listener-deploy
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8080'
        prometheus.io/normalizer: 'true'
    spec:
      containers:
      - name: my-ds
        image: eu.gcr.io/slavayssiere-sandbox/consumer-aggregator-listener:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: 50M
            cpu: 50m
          limits:
            memory: 100M
            cpu: 100m
        volumeMounts:
          - name: secret-sa
            mountPath: "/secret"
            readOnly: true
      terminationGracePeriodSeconds: 15
      volumes:
      - name: secret-sa
        secret:
          secretName: sa-pubsub-datastore
