deployment/injector-twitter-GiletsJaunes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: injector-twitter-gilletsjaunes-deploy
  namespace: injectors
  labels:
    app: injector-twitter-gilletsjaunes-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: injector-twitter-gilletsjaunes-deploy
  template:
    metadata:
      labels:
        app: injector-twitter-gilletsjaunes-deploy
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/injector: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: my-injector
        image: eu.gcr.io/slavayssiere-sandbox/twitter-injector:0.0.17
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 80M
            cpu: 500m
          limits:
            memory: 80M
            cpu: 500m
        volumeMounts:
          - name: secret-sa
            mountPath: "/secret"
            readOnly: true
      volumes:
      - name: secret-sa
        secret:
          secretName: sa-pubsub-publisher
