deployment/normalizer-mastodon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: normalized-mastodon-deploy
  namespace: normalizers
  labels:
    app: normalized-mastodon-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: normalized-mastodon-deploy
  template:
    metadata:
      labels:
        app: normalized-mastodon-deploy
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8080'
        prometheus.io/normalizer: 'true'
    spec:
      containers:
      - name: my-normalized
        image: eu.gcr.io/slavayssiere-sandbox/mastodon-normalizer:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 20M
            cpu: 10m
          limits:
            memory: 20M
            cpu: 10m
        volumeMounts:
          - name: secret-sa
            mountPath: "/secret"
            readOnly: true
      terminationGracePeriodSeconds: 15
      volumes:
      - name: secret-sa
        secret:
          secretName: sa-pubsub-full
