deployment/app-sse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-sse-deploy
  namespace: consumers
  labels:
    app: app-sse-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-sse-deploy
  template:
    metadata:
      labels:
        app: app-sse-deploy
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8080'
        prometheus.io/normalizer: 'true'
    spec:
      containers:
      - name: app
        image: eu.gcr.io/slavayssiere-sandbox/app-sse:0.0.30
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: 20M
            cpu: 10m
          limits:
            memory: 20M
            cpu: 10m
        volumeMounts:
          - name: secret-sa
            mountPath: "/secret"
            readOnly: true
      terminationGracePeriodSeconds: 15
      volumes:
      - name: secret-sa
        secret:
          secretName: sa-sse
---
apiVersion: v1
kind: Service
metadata:
  name: app-sse-svc
  namespace: consumers
  labels:
    k8s-app: app-sse-svc
spec:
  selector:
    app: app-sse-deploy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-sse-virtualservice
  namespace: consumers
spec:
  hosts:
  - "iap.gcp-wescale.slavayssiere.fr"
  gateways:
  - consumers-gateway-iap
  http:
  - route:
    - destination:
        host: app-sse-svc
